--- a/index.html
+++ b/index.html
@@ -4,14 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Knock Out</title>
     <link rel="stylesheet" href="./assets/CSS/stylesheet.css">
 </head>
 <body>
-    <p>Ingresa todo lo que necesites</p>
-    <p>Vuelve a ingresar adiconales</p>
 
+<!--Discografías del mes-->
+
+    <h1>Discografía de Enero</h1>
+    <h3>Kings of Lion</h3>
+
+    <h1>Discografía de Febrero</h1>
+    <h3>1975</h3>
+
+    <h1>Discografía de Marzo</h1>
+    <h3></h3>
+
+    <hr>
+
+    <p>Pensar en qué <b>discografías</b><br>debo escuchar en estos meses</p>
+
+    <blockquote>"La vida sin música sería un error"</blockquote>
     
+    <em>Derechos reservados 2023</em><br>
+    <i>Stolenharts.com</i><br>
+
+    <br>
+
+    <s>Acaso no se puede esucchar un disco diario?</s><br>
+    <u>En caso de no poder dar click aquí</u>
 
 </body>
 </html>
