--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
     <s>Acaso no se puede esucchar un disco diario?</s><br>
     <u>En caso de no poder dar click aquí</u>
 
+    <p>click aquí <link rel="stylesheet" href="./p2.html"></p>
+    
 </body>
 </html>
