--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     <u>En caso de no poder dar click aquí</u>
 
     <p>click aquí <link rel="stylesheet" href="./p2.html"></p>
+
+    <input type="text"><br>
+    <input type="color"><br>
+    <input type="number"><br>
+    <input type="password"><br>
+    <input type="submit"><br>
     
 </body>
 </html>
