--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
     <input type="number"><br>
     <input type="password"><br>
     <input type="submit"><br>
+
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <button>Aceptar</button>
+    <select name="" id="">
+        <option value="goku">Goku</option>
+        <option value="vegeta">Vegeta</option>
+        <option value="gohan">Gohan</option>
+        <option value="trunks">Trunks</option>
+    </select>
     
 </body>
 </html>
