--- a/index.html
+++ b/index.html
@@ -36,20 +36,23 @@
 
     <p>click aquí <link rel="stylesheet" href="./p2.html"></p>
 
-    <input type="text"><br>
-    <input type="color"><br>
-    <input type="number"><br>
-    <input type="password"><br>
-    <input type="submit"><br>
-
-    <textarea name="" id="" cols="30" rows="10"></textarea>
-    <button>Aceptar</button>
-    <select name="" id="">
-        <option value="goku">Goku</option>
-        <option value="vegeta">Vegeta</option>
-        <option value="gohan">Gohan</option>
-        <option value="trunks">Trunks</option>
-    </select>
+    <form action="">
+        <fieldset>
+            <input type="text" placeholder="ingrese texto..."><br>
+            <input type="color"><br>
+            <input type="number" placeholder="ingrese numero..."><br>
+            <input type="password" placeholder="ingrese password..."><br>
+            <input type="submit"><br>
+            <textarea name="" id="" cols="30" rows="10" placeholder="ingrese comentarios..."></textarea><br>
+            <select name="" id="">
+                <option value="goku">Goku</option>
+                <option value="vegeta">Vegeta</option>
+                <option value="gohan">Gohan</option>
+                <option value="trunks">Trunks</option>
+            </select><br>
+            <button>Aceptar</button>
+        </fieldset>
+    </form>
     
 </body>
 </html>
