--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
 
     <p>click aquí <link rel="stylesheet" href="./p2.html"></p>
 
+    <!--Campos de formularios -->
+
     <form action="">
         <fieldset>
+            <legend>Legendaddy</legend>
             <input type="text" placeholder="ingrese texto..."><br>
             <input type="color"><br>
             <input type="number" placeholder="ingrese numero..."><br>
@@ -52,7 +55,15 @@
             </select><br>
             <button>Aceptar</button>
         </fieldset>
-    </form>
+    </form><br>
+
+    <!--Imagen-->
+
+    <img src="http://placekitten.com/400/100" alt="">
+
+    <hr>
+
+    <a href="https://www.gorillaz.com/">Ir a Gorillaz.com</a>
     
 </body>
 </html>
