--- a/index.html
+++ b/index.html
@@ -60,10 +60,42 @@
     <!--Imagen-->
 
     <img src="http://placekitten.com/400/100" alt="">
-
     <hr>
-
-    <a href="https://www.gorillaz.com/">Ir a Gorillaz.com</a>
-    
+    <a href="https://www.gorillaz.com/">Ir a Gorillaz.com</a><br>
+    <hr>
+    <ul>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+    </ul>
+    <ol>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+    </ol>
+    <table>
+        <thead>
+            <tr>
+                <th>Mes</th>
+                <th>Ahorros</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Enero</td>
+                <td>$500</td>
+            </tr>
+            <tr>
+                <td>Febrero</td>
+                <td>$1000</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Suma total:</td>
+                <td>$1500</td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 </html>
