--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <hr>
     <a href="https://www.gorillaz.com/">Ir a Gorillaz.com</a><br>
     <hr>
+
     <ul>
         <li>Elemento 1</li>
         <li>Elemento 2</li>
@@ -73,6 +74,9 @@
         <li>Elemento 2</li>
         <li>Elemento 3</li>
     </ol>
+    
+    <hr>
+
     <table>
         <thead>
             <tr>
@@ -97,5 +101,17 @@
             </tr>
         </tfoot>
     </table>
+
+    <hr>
+
+    <!--Menú-->
+
+    <li><a href="./index.html">Inicio</a></li>
+    <li><a href="./p2.html">Página 1</a></li>
+    <li><a href="./p3.html">Página 2</a></li>
+    <li><a href="./p4.html">Página 3</a></li>
+
+    
+
 </body>
 </html>
