--- a/p4.html
+++ b/p4.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <form action="">
-        <input type="text">
-        <input type="text">
-    </form>
-
+    
     <li><a href="./index.html">Inicio</a></li>
     <li><a href="./p2.html">Página 1</a></li>
     <li><a href="./p3.html">Página 2</a></li>
     <li><a href="./p4.html">Página 3</a></li>
 
-    <img src="http://placekitten.com/600/200" alt="">
+    <img src="http://placekitten.com/400/200" alt="">
 
 </body>
 </html>
