--- a/p2.html
+++ b/p2.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<style>
+    body{
+        background-color: #eee;
+        color: rebeccapurple;
+    }
+</style>
+
 <body>
     <form action="">
         <input type="text">
