coloreando el sitio

--- a/p3.html
+++ b/p3.html
@@ -5,6 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <style>
+
+        body{
+            background-color: #f1da63;
+        }
+
+        #parrafo{
+            color: blueviolet;
+        }
+
+        .etiquetas{
+            color: blue;
+        }
+
+    </style>
+
 </head>
 <body>
 
@@ -14,6 +31,15 @@
     <li><a href="./p4.html">Página 3</a></li>
 
     <img src="http://placekitten.com/800/400" alt="">
+
+
+    <hr>
+
+    <p id="parrafo">Este es un parrafo</p>
+    <span>Este es un span</span><br>
+    <span class="etiquetas">Este es un segundo span</span><br>
+    <span>Este es un tercer span</span><br>
+    <span class="etiquetas">Este es un cuarto span</span>
 
 </body>
 </html>
