bordes y margenes en px

--- a/p3.html
+++ b/p3.html
@@ -20,6 +20,15 @@
             color: blue;
         }
 
+        .caja{
+            margin: 38px;
+            background-color: burlywood;
+            padding: 8px;
+            border-style: dashed;
+            border-left: solid;
+            border-right: solid;
+        }
+
     </style>
 
 </head>
@@ -40,6 +49,11 @@
     <span class="etiquetas">Este es un segundo span</span><br>
     <span>Este es un tercer span</span><br>
     <span class="etiquetas">Este es un cuarto span</span>
+
+
+    <hr>
+
+    <div class="caja">No puede ser!!!</div>
 
 </body>
 </html>
