ejercicio de cajas

--- a/p3.html
+++ b/p3.html
@@ -27,6 +27,9 @@
             border-style: dashed;
             border-left: solid;
             border-right: solid;
+            height: 100px;
+            width: 200px;
+            
         }
 
     </style>
