--- a/p4.html
+++ b/p4.html
@@ -5,6 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: #DAD8D8;
+        }
+
+        #caja{
+            background-color: whitesmoke;
+            margin: 10px;
+            font-style: inherit;
+            font-size: 25px;
+            padding: 15px;
+            border-radius: 5px;
+        }
+
+        .boton1{
+            background-color: #479FFC;
+            color: whitesmoke;
+            border-style: none;
+            margin: 2px;
+            padding: 7px;
+        }
+
+        .boton2{
+            background-color: #48627D;
+            color: whitesmoke;
+            border-style: none;
+            margin: 2px;
+            padding: 7px;
+        }
+
+    </style>
 </head>
 <body>
     
@@ -13,7 +44,18 @@
     <li><a href="./p3.html">Página 2</a></li>
     <li><a href="./p4.html">Página 3</a></li>
 
-    <img src="http://placekitten.com/400/200" alt="">
+    <!--<img src="http://placekitten.com/400/200" alt="">-->
+
+
+    <div id="caja">
+        <p><strong>Soy cabecera</strong></p>
+        <hr>
+        <p><strong>Soy contendio dentro de la caja!, estoy practicando mis habilidades<br>
+        con CSS y repaso mi conocimiento sobre la teoría de la caja</strong></p>
+        <hr>
+        <button class="boton1">Aceptar</button>
+        <button class="boton2">Cancelar</button>
+    </div>
 
 </body>
 </html>
