alineación de textos

--- a/p4.html
+++ b/p4.html
@@ -17,6 +17,7 @@
             font-size: 25px;
             padding: 15px;
             border-radius: 5px;
+            text-align: right;
         }
 
         .boton1{
