--- a/p4.html
+++ b/p4.html
@@ -29,7 +29,7 @@
         }
 
         .boton2{
-            background-color: #48627D;
+            background-color: #293949;
             color: whitesmoke;
             border-style: none;
             margin: 2px;
