--- a/p4.html
+++ b/p4.html
@@ -21,7 +21,7 @@
         }
 
         .boton1{
-            background-color: #479FFC;
+            background-color: #74abe6;
             color: whitesmoke;
             border-style: none;
             margin: 2px;
