editado del texto

--- a/p5.html
+++ b/p5.html
@@ -11,6 +11,18 @@
             background-color: antiquewhite;
             color: blueviolet;
         }
+
+        a{
+            text-decoration: underline;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+        }
+
+        p{
+            text-transform: capitalize;
+            line-height: 1.4;
+            
+        }
     </style>
 
 </head>
