--- a/p5.html
+++ b/p5.html
@@ -19,9 +19,12 @@
         }
 
         p{
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 1.5em;
+            font-style: oblique;
             text-transform: capitalize;
             line-height: 1.4;
-            
+            text-shadow: 5px 2px 2px rgba(0, 0, 0, 0.3);
         }
     </style>
 
