nueva pagina con editado de links

--- a/p5.html
+++ b/p5.html
@@ -13,10 +13,16 @@
         }
 
         a{
-            text-decoration: underline;
             text-transform: uppercase;
             letter-spacing: 3px;
+            color: hotpink;
         }
+
+        a:hover {
+            color: pink;
+            text-decoration: underline;
+        }
+
 
         p{
             font-family: 'Courier New', Courier, monospace;
