--- a/P7.html
+++ b/P7.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+
+        body {
+            background-color: #eee;
+        }
+
+        p {
+            display: inline;
+        }
+
+    </style>
+
 </head>
 <body>
     <p>Hola soy un bloque!!</p>
