--- a/P7.html
+++ b/P7.html
@@ -9,7 +9,7 @@
     <style>
 
         body {
-            background-color: #eee;
+            background-color: #942222;
         }
 
         p {
