tipos de bloques

--- a/P7.html
+++ b/P7.html
@@ -12,9 +12,6 @@
             background-color: #942222;
         }
 
-        p {
-            display: inline;
-        }
 
     </style>
 
@@ -24,5 +21,16 @@
     <p>Hola soy un bloque!!</p>
     <span>Hola soy in-line!!</span>
     <span>Hola soy in-line!!</span>
+
+    <hr>
+
+    <h1>Soy bloque</h1>
+    <div>También soy bloque DIV</div>
+    <form>También soy bloque FORM</form>
+    <header>También soy bloque HEADER</header>
+    <footer>También soy bloque FOOTER</footer>
+    <section>También soy bloque SECTION</section>
+
+
 </body>
 </html>
