etiquetas in-line

--- a/P7.html
+++ b/P7.html
@@ -12,6 +12,10 @@
             background-color: #942222;
         }
 
+        #invisible {
+            display: none;
+        }
+
 
     </style>
 
@@ -31,6 +35,12 @@
     <footer>También soy bloque FOOTER</footer>
     <section>También soy bloque SECTION</section>
 
+
+    <hr>
+
+    <span>Soy in-line</span>
+    <a href="">Soy un in-line</a>
+    <div id="invisible">soy un in-in-line</div>
 
 </body>
 </html>
