max width y margin

--- a/P7.html
+++ b/P7.html
@@ -16,6 +16,13 @@
             display: none;
         }
 
+        p {
+            max-width: 450px;
+            background-color: aquamarine;
+            margin: auto;
+            position: relative;
+        }
+
 
     </style>
 
@@ -41,6 +48,10 @@
     <span>Soy in-line</span>
     <a href="">Soy un in-line</a>
     <div id="invisible">soy un in-in-line</div>
+
+    <hr>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis temporibus totam dolor perferendis excepturi, tempora aperiam architecto sed earum repellendus.</p>
 
 </body>
 </html>
