--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <li><a href="./p2.html">Página 1</a></li>
     <li><a href="./p3.html">Página 2</a></li>
     <li><a href="./p4.html">Página 3</a></li>
-
+    <li><a href="./p9.html">Acerca de</a></li>
     
 
 </body>
