gradientes en fondos y div

--- a/p13.html
+++ b/p13.html
@@ -8,28 +8,33 @@
 
     <style>
         body {
-            background-color: #eee;
+            background-image: linear-gradient(to right, rgb(157, 218, 157), rgb(127, 191, 228));
         }
 
         .fondo {
-            height: 400px;
-            background-color: blueviolet;
-            background-image: url(http://placekitten.com/200/300);
-            background-repeat: no-repeat;
-            background-position: left-top;
-            background-attachment: fixed;
+           text-align: center;
+           font-size: 150px;
+           color: whitesmoke;
+        }
+
+        .subtitulo {
+            text-align: center;
+            font-size: 80px;
+        }
+
+        .subtitulo2 {
+            text-align: center;
+            font-size: 40px;
         }
 
     </style>
 
 </head>
 <body>
-    <div class="fondo">
-        <p>Lala</p>
-        <p>Lele</p>
-        <p>Lili</p>
-        <p>Lolo</p>
-        <p>María</p>
+    <div>
+        <p class="fondo">JUAN SON</p>
+        <P class="subtitulo">Abandonados</P>
+        <p class="subtitulo2">09.09.23</p>
     </div>
 </body>
 </html>
