--- a/p15.html
+++ b/p15.html
@@ -62,5 +62,8 @@
     <div class="box">
         <p class="text">鬼</p>
     </div>
+    <div class="box">
+        <p class="text">鬼</p>
+    </div>
 </body>
 </html>
