--- a/p15.html
+++ b/p15.html
@@ -42,6 +42,21 @@
             transform: scale(1.6, 1.6) rotate(-20deg);
         }
 
+        .box3 {
+            align-items:end;
+            position: relative;
+            left: 50px;
+            top: 50px;
+            width: 100px;
+            height: 100px;
+            background-color: white;
+            box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2);
+            transform: rotate(-20deg);
+        }
+
+        .box3:hover {
+            transform: scale(1.6, 1.6) rotate(-20deg);
+        }
 
         .text {
             text-align: center;
@@ -62,7 +77,7 @@
     <div class="box">
         <p class="text">鬼</p>
     </div>
-    <div class="box">
+    <div class="box3">
         <p class="text">鬼</p>
     </div>
 </body>
