--- a/p17.html
+++ b/p17.html
@@ -16,23 +16,25 @@
             background-color: white;
             box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.1);
             width: 250px;
-            height: 35px;    
+            height: 35px;
+            border-left: solid 2px red;    
         }
 
         .box:hover {
-            transition: 0.5s;
-            transform:scale(90%)
+            transition: 0.3s;
+            transform:scale(1.05, 1.05)
         }
 
         .box2 {
             background-color: white;
-            box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
             width: 250px;
             height: 35px;
+            border-left: solid 2px green;
         }
 
         .box2:hover {
-            box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2);
         }
 
         .box3 {
@@ -40,6 +42,7 @@
             box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.1);
             width: 250px;
             height: 35px;
+            border-left: solid 2px blue;
         }
 
         .box3:hover {
