--- a/p18.html
+++ b/p18.html
@@ -16,7 +16,7 @@
         }
 
         .element {
-            background-color: red;
+            background-color: green;
         }
 
     </style>
