--- a/p18.html
+++ b/p18.html
@@ -13,6 +13,7 @@
 
         .grid {
             display: inline-grid;
+            grid-template-columns: 70px 40px 100px;
         }
 
         .element {
