--- a/p18.html
+++ b/p18.html
@@ -13,11 +13,11 @@
 
         .grid {
             display: inline-grid;
-            grid-template-columns: 70px 40px 100px;
+            grid-template-columns: 80px 20px 90px;
         }
 
         .element {
-            background-color: green;
+            background-color: blue;
         }
 
     </style>
