every word a say to you

--- a/p19.html
+++ b/p19.html
@@ -17,7 +17,7 @@
         }
 
         .element {
-            background-color: red;
+            background-color: purple;
         }
 
     </style>
