--- a/p19.html
+++ b/p19.html
@@ -13,11 +13,12 @@
 
         .grid {
             display: grid;
-            grid-template-rows: 50px 100px ;
+            grid-template-rows: minmax(100px, auto);
+            grid-template-columns: minmax(auto, 50%)
         }
 
         .element {
-            background-color: purple;
+            background-color: red;
         }
 
     </style>
@@ -28,6 +29,9 @@
         <div class="element">AAAAA</div>
         <div class="element">B</div>
         <div class="element">C</div>
+        <div class="element">D</div>
+        <div class="element">E</div>
+        <div class="element">F</div>
     </div>
 </body>
 </html>
